# FacialMorphingAnimation

./: CMakeLists.txt  README.md  build.sh  imgui.ini
.github/workflows/: ccpp.yml
include/: Camera.h  Logger.h  Mesh.h  ObjParser.h  Shader.h
objects/: openMouth.mtl
shaders/: MorphingWithLightFragment.glsl  MorphingWithLightVertex.glsl
src/: Camera.cpp  Mesh.cpp  Shader.cpp  main.cpp
